--- a/lang/en/Lang.json
+++ b/lang/en/Lang.json
@@ -3,8 +3,7 @@
     "de": "German",
     "nl": "Dutch",
     "pl": "Polish",
-    "sp": "Spanish",
-    "in": "Hindi",
+    "sp": "Spanish"
     "it": "Italian",    
     "manageInstance": "Manage Instance",
     "instanceViewDetailText": "View, update or manage an instance on the OverSee.",
