--- a/lang/de/lang.json
+++ b/lang/de/lang.json
@@ -4,7 +4,7 @@
     "nl": "Niederländisch",
     "pl": "Polnisch",
     "sp": "Spanisch",
-    "ch": "chinese"
+    "ch": "Chinese Soon..."
     "manageInstance": "Instanz verwalten",
     "instanceViewDetailText": "Ansicht, Aktualisierung und Verwaltung einer Instanz im OverSee.",
     "fivezerozeroInstanceError": "500 SERVERFEHLER",
